--- a/alfa.html
+++ b/alfa.html
@@ -1,23 +1,23 @@
-<DOC! html>
+<!DOCtype html>
 	<head>
 		<link rel="stylesheet" type="text/css" href="alfa.css">
 	</head>
 	
 <body>
-	<div id="header">
-		<!--navigation bar-->
+	<div id="header">	
+	<!--Head-->
+		<div id="title">
+			<h1> SBU Coders Guild </h1>
+		</div>
+	<!--navigation bar-->
 		<div id="navBar">
 			<ul>
 				<li> <a> Home </a> </li>
 				<li> <a> Projects </a> </li>
 				<li> <a> Specializations </a> </li>
 				<li> <a> Languages </a> </li>
+				<li> <a> About </a> </li>
 			</ul>
-		</div>
-		
-	<!--Head-->
-		<div id="title">
-			<h1> SBU Coders Guild </h1>
 		</div>
 	</div>
 	
